--- a/src/Components/styles/sell.css
+++ b/src/Components/styles/sell.css
@@ -12,10 +12,11 @@
   border: 2px solid transparent;
   outline: #000 3px solid;
   border-radius: 2%;
+  background-color: #d70505;
 }
 
 .headerSell {
-  background-color: rgb(253, 28, 28);
+  background-color: #d70505;
   display: flex;
   margin: 5px;
   align-items: center;
@@ -38,7 +39,8 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    overflow: hidden;
+    overflow: auto;
     top: 0;
+    left: 0;
     z-index: -1;
 }
