--- a/src/Components/styles/Navbar.css
+++ b/src/Components/styles/Navbar.css
@@ -2,8 +2,9 @@
 
 .Navcontainer {
   position: fixed;
-  background-color: #ffffff;
+  background-color: #af0000;
   color: #000000;
+  border-bottom: #4e4a4a solid 1px;
 }
 
 .navigatorContainer {
@@ -27,7 +28,7 @@
 
 .navlinks {
   display: flex;
-  color: #000000;
+  color: #000;
   font-weight: bolder;
   text-decoration: none;
   align-items: center;
