--- a/src/Components/styles/login.css
+++ b/src/Components/styles/login.css
@@ -6,11 +6,10 @@
   transform: translate(-50%, -50%);
 }
 .login-form {
-  width: 40%;
+  width: 50%;
   margin: 50px auto;
   font-size: 15px;
-  background-color: #ffffff;
-  padding: 30px 40px;
+  padding: 60px 40px;
   border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
@@ -25,11 +24,9 @@
   text-align: center;
   margin-top: 20px;
 }
-.login-link a {
-  color: #dc3545;
-}
+
 .login-link a:hover {
-  color: #c82333;
+  color: #74000d;
 }
 .padgrp{
 
