--- a/src/Components/styles/Index.css
+++ b/src/Components/styles/Index.css
@@ -1,15 +1,11 @@
 .contIndex {
   cursor: pointer;
   position: relative;
-  width: 30%;
-  height: 100%;
-  color: white;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  align-items: flex-start;
+  margin-top: 25px;
+  top: 5%;
   transition: all 1s;
 }
 
@@ -35,14 +31,12 @@
   z-index: -1;
   display: inline-flex;
   width: 100%;
-  height: 70%;
-  background-color: #1f1e1e;
+  height: 100%;
   left: 50%;
-  top: 50%;
+  top: 58%;
   transform: translate(-50%, -50%);
   border: 2px solid transparent;
   outline: #000 3px solid;
-  border-radius: 2%;
   transition: all 1s;
   justify-content: space-between;
 }
@@ -55,7 +49,8 @@
 .despl {
   position: absolute;
   width: 100%;
-  height: 100%;
+  top: 15%;
+  height: 66%;
   z-index: 100;
 }
 
@@ -89,7 +84,11 @@
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  transition: all 3s;
+  filter: blur(0px) drop-shadow(0px 0px 10px #000);
+
 }
+
 .exit {
   position: relative;
   width: 10%;
@@ -119,6 +118,7 @@
   background-color: transparent;
   border-radius: 15px;
 }
+
 .contproducts::-webkit-scrollbar-track {
   background-color: transparent;
 }
@@ -130,4 +130,9 @@
 
 .btn-buynow:hover {
   color: white;
+}
+
+.darkeffect {
+  transition: all 3s;
+  filter: blur(22px) drop-shadow(0px 0px 10px #000);
 }
