--- a/src/Components/styles/shopList.css
+++ b/src/Components/styles/shopList.css
@@ -9,25 +9,28 @@
 
 }
 
-.overr::-webkit-scrollbar-track-piece {
-  width: 33px;
-}
-
 .overr::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  background-color: rgb(248, 5, 5);
 }
 
 .overr::-webkit-scrollbar-track {
   background-color: transparent;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 
-.styleScroll::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background-color: rgb(165, 12, 12);
+.ssScroll::-webkit-scrollbar {
+  width: 5px;
+
 }
-.styleScroll::-webkit-scrollbar-track{
+
+
+.ssScroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgb(190, 34, 34);
+}
+
+.ssScroll::-webkit-scrollbar-track {
   background-color: transparent;
   border-radius: 15px;
 }
