--- a/src/Components/styles/Navbar.css
+++ b/src/Components/styles/Navbar.css
@@ -35,6 +35,7 @@
   transition: all 0.5s;
   margin-left: 20%;
   width: 100%;
+  cursor: pointer;
 }
 .navlinks:hover {
   filter: brightness(150%);
