--- a/src/Components/styles/footer.css
+++ b/src/Components/styles/footer.css
@@ -1,7 +1,40 @@
 #footer {
     background-color: black;
     position: relative;
-    color: white ;
+    color: white;
     display: flex;
-    top:740px;
+    flex-direction: row;
+    top: 0px;
+}
+
+.footer__container__right__links>ul>li>a {
+    color: white;
+    text-decoration: none;
+}
+.footer__container__right__links>ul>li>a:hover {
+    color: #d70505;
+}
+.footer__container__right__links>ul{
+    list-style-type: none;
+}
+
+.footer__container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+}
+.footer__container__right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+}
+.footer__container__left{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin-left: 40px;
 }
